tests/invalid/test9_invalid.imagelang
{
    if ("text") then {
        int y;
    }
}